gccida/c2/elimination_effects
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3132:35: error: must use 'enum' tag to refer to type 'machine_mode'
void  elimination_effects( rtx x, machine_mode mem_mode) 
                                  ^
                                  enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3158:4: error: expected ';' after expression
rtx v27; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3158:5: error: use of undeclared identifier 'v27'
rtx v27; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3161:4: error: expected ';' after expression
rtx v30; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3161:5: error: use of undeclared identifier 'v30'
rtx v30; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3165:4: error: expected ';' after expression
rtx v34; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3165:5: error: use of undeclared identifier 'v34'
rtx v34; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3203:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v23 = ( __int64)v4[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3217:1: error: use of undeclared identifier 'v27'
v27 = global_rtl[4]; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3220:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v28 = ( __int64)v4[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3232:1: error: use of undeclared identifier 'v30'
v30 = v22[2].to_rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3234:6: error: use of undeclared identifier 'v30'
if ( v30 == v31 && v31 != v27 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3234:27: error: use of undeclared identifier 'v27'
if ( v30 == v31 && v31 != v27 ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3236:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v32 = ( __int64)v4[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3237:38: error: expected expression
if ( *( _WORD *)v32 == 75 && *( rtx *)( v32 + 8) == v30 && ( v33 = *( _QWORD *)( v32 + 16), *( _WORD *)v33 == 54) ) 
                                     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3237:53: error: use of undeclared identifier 'v30'
if ( *( _WORD *)v32 == 75 && *( rtx *)( v32 + 8) == v30 && ( v33 = *( _QWORD *)( v32 + 16), *( _WORD *)v33 == 54) ) 
                                                    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3242:1: error: use of undeclared identifier 'v34'
v34 = v22[3].to_rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3244:6: error: use of undeclared identifier 'v34'
if ( v34 == v35 && v35 != v27 ) 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/reload1.c:3244:27: error: use of undeclared identifier 'v27'
if ( v34 == v35 && v35 != v27 ) 
                          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/elimination_effects/src/obj/reload1.o] Error 1
